2013-04-02  Guillaume Lazzara  <lazzara@caroussel.lrde.epita.fr>

	Improve time logging in Scribo.

	* scribo/debug/logger.hh: Use a stack to handle several
	simultaneous logs.

	* scribo/binarization/sauvola_ms.hh: Fix an invalid time stop.

	* scribo/binarization/internal/local_threshold_core.hh,
	* src/binarization/sauvola.cc,
	* src/binarization/sauvola_ms.cc,
	* src/binarization/sauvola_ms_debug.cc: Rename time logging
	functions.

2013-03-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes in scribo.

	* scribo/core/line_set.hh: Add update_types().

	* scribo/core/paragraph_info.hh: Set paragraph as valid when a
	line is added.

	* scribo/core/paragraph_set.hh: Add a forward declaration.

	* scribo/text/link_lines.hh: Add more documentation.

2013-03-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/binarization/Makefile.am: Fix EXTRA_DIST file names.

2013-03-04  Roland Levillain  <roland@lrde.epita.fr>

	Fix inclusion paths.

	* common.mk (AM_CPPFLAGS): Add paths to scribo/ dirs instead of
	top-level dirs.

2013-03-25  Guillaume Lazzara  <z@lrde.epita.fr>

	Add ICDAR contests related source code.

	* src/contest/Makefile.am: Add subdirs.

	* src/contest/hbr-2013/Makefile.am,
	* src/contest/hbr-2013/content_in_hdoc_hbr.cc,
	* src/contest/hnla-2013/Makefile.am,
	* src/contest/hnla-2013/content_in_hdoc_hnla.cc: New.

2013-03-25  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix some preconditions.

	* scribo/core/document.hh: Relax some preconditions.

	* scribo/primitive/extract/alignments.hh: New precondition.

2013-03-25  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/binarization/sauvola_ms.hh: Add overloads.

2013-03-25  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/core/document.hh: Add more assertions.

2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/primitive/link/with_single_left_link_dmax_ratio_aligned.hh:
	Fix an invalid forward declaration.

2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes.
